--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,15 @@
 html, body {
     max-width: 100%!important; overflow-x: hidden!important
 }
+li a:is(:link,:active,:visited) {
+    color:black;
+    text-decoration: none;
+    padding: .5rem 1.5rem;
+}
+a:is(:link,:active,:visited).active {
+    color:white;
+    background-color:rgb(240, 173, 78)
+}
 .nav-item {
     float:right;
 }
