--- a/template/minimal-sneakers.html
+++ b/template/minimal-sneakers.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Shazada Philippines</title>
+  <title>Minimal Sneakers</title>
   <!--META TAGS-->
   <meta charset="UTF-8">
   <meta name="description" content="online shoes shopping cart">
