--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,9 @@ a:is(:link,:active,:visited).active {
     width: 70%;
     margin-bottom: 30px;
 }
+.fa-solid:hover {
+    cursor: pointer;
+}
 .badge {
     position: relative;
     bottom:25%;
