--- a/template/signin.html
+++ b/template/signin.html
@@ -142,7 +142,7 @@
                             updateProfile(auth.currentUser, {
                                 displayName: displayName.value
                             });
-                            window.location.replace("../index.html");
+                            window.location.replace("https://shazada.vercel.app/index.html");
                         })
                         .catch((error) => {
                             const errorCode = error.code;
@@ -152,18 +152,6 @@
                         });
                 } else {
                     alert("Passwords do not match.")
-                    const user = {
-                        name: displayName.value,
-                        email: email.value,
-                        password: password.value
-                    };
-
-                    push(userSignUp, user);
-                    displayName.value = "";
-                    email.value = "";
-                    password.value = "";
-                    confirmPassword.value = "";
-                    console.log(user);
                 }
             }
         }
@@ -173,7 +161,7 @@
                     const credential = GoogleAuthProvider.credentialFromResult(result);
                     const token = credential.accessToken;
                     const user = result.user;
-                    window.location.replace("index.html");
+                    window.location.replace("https://shazada.vercel.app/index.html");
                 })
                 .catch((error) => {
                     const errorCode = error.code;
