--- a/template/signin.html
+++ b/template/signin.html
@@ -122,7 +122,7 @@
             signInWithEmailAndPassword(auth, siemail, sipassword)
                 .then((userCredential) => {
                     const user = userCredential.user;
-                    window.location.replace("index.html");
+                    window.location.replace("https://shazada.vercel.app/");
                 })
                 .catch((error) => {
                     const errorCode = error.code;
