--- a/template/minimal-sneakers.html
+++ b/template/minimal-sneakers.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html>
-
 <head>
   <title>Minimal Sneaker</title>
   <!--META TAGS-->
@@ -15,16 +12,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <!--Font Awesome CDN-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <!--Google Font CDN-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
   <!--External CSS-->
+  <link rel="stylesheet" href="/assets/css/product.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
-  <link rel="stylesheet" href="/assets/css/button-image-hover.css" />
-  <!--External Javascript-->
-  <script type="text/javascript" src="/app/js/function.js"></script>
 </head>
 
 <body>
@@ -56,47 +51,16 @@
             <a class="nav-link" href="/template/signin.html">Sign in</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <i class="fa" data-bs-toggle="modal" data-bs-target="#exampleModal" style="font-size: 24px">&#xf07a;</i><span
-            id="cart-count" class="badge text-bg-warning"></span>
-        </form>
+        <a href="/cart.html">
+          <div class="cart">
+            <i class="bi bi-cart2"></i>
+            <div id="cartAmount" class="cartAmount">0</div>
+          </div>
+        </a>
       </div>
     </div>
   </nav>
-  <!-- Checkout page static modal-->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Cart Items</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <table style="width:100%" id="modal-items">
-            <tr>
-              <th>Item</th>
-              <th>Name</th>
-              <th>Quantity</th>
-              <th>Price</th>
-            </tr>
-          </table>
-        </div>
-        <hr />
-        <h5>Total: <span id="total"></span></h5>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-warning" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-warning">Proceed to checkout</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <header>
-    <h1 class="text-center categories mt-5">Minimal Sneakers</h1>
-    <figure id="container"></figure>
-  </header>
-  <script>
-    getJSONData("/data/minimal-sneakers.json");
-  </script>
+  <div class="shop" id="shop"></div>
   <!--Bootstrap Javascript CDN-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -104,6 +68,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
     integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
     crossorigin="anonymous"></script>
+  <script src="/app/js/minimal-sneakers.js"></script>
+  <script src="/app/js/function.js"></script>
 </body>
 
 </html>
