--- a/template/derby-shoes.html
+++ b/template/derby-shoes.html
@@ -1,8 +1,5 @@
-<!DOCTYPE html>
-<html>
-
 <head>
-  <title>Derby Shoes</title>
+  <title>Minimal Sneakers</title>
   <!--META TAGS-->
   <meta charset="UTF-8">
   <meta name="description" content="online shoes shopping cart">
@@ -15,16 +12,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <!--Font Awesome CDN-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <!--Google Font CDN-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
   <!--External CSS-->
+  <link rel="stylesheet" href="/assets/css/product.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
-  <link rel="stylesheet" href="/assets/css/button-image-hover.css" />
-  <!--External Javascript-->
-  <script type="text/javascript" src="/app/js/function.js"></script>
 </head>
 
 <body>
@@ -56,38 +51,16 @@
             <a class="nav-link" href="/template/signin.html">Sign in</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <i class="fa" data-bs-toggle="modal" data-bs-target="#exampleModal" style="font-size: 24px">&#xf07a;</i><span
-            id="cart-count" class="badge text-bg-warning"></span>
-        </form>
+        <a href="/derby-cart.html">
+          <div class="cart">
+            <i class="bi bi-cart2"></i>
+            <div id="cartAmount" class="cartAmount">0</div>
+          </div>
+        </a>
       </div>
     </div>
   </nav>
-  <!--Checkout page static modal-->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          Sample Static Data
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <header>
-    <h1 class="text-center mt-5 pt-5">Derby Shoes</h1>
-    <figure id="container"></figure>
-  </header>
-  <script>
-    getJSONData("/data/derby-shoes.json");
-  </script>
+  <div class="shop" id="shop"></div>
   <!--Bootstrap Javascript CDN-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
     integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -95,6 +68,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
     integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
     crossorigin="anonymous"></script>
+  <script src="/app/js/data/derby.js"></script>
+  <script src="/app/js/function.js"></script>
 </body>
 
 </html>
