--- a/template/about.html
+++ b/template/about.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>About</title>
+  <title>Categories</title>
   <!--META TAGS-->
   <meta charset="UTF-8">
   <meta name="description" content="online shoes shopping cart">
@@ -15,16 +15,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <!--Font Awesome CDN-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <!--Google Font CDN-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
   <!--External CSS-->
+  <link rel="stylesheet" href="/assets/css/product.css" />
   <link rel="stylesheet" href="/assets/css/main.css" />
   <link rel="stylesheet" href="/assets/css/about-us.css" />
-  <!--External Javascript-->
-  <script type="text/javascript" src="/app/js/function.js"></script>
 </head>
 
 <body>
@@ -44,43 +43,21 @@
             <a class="nav-link" aria-current="page" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/template/men-categories.html">Men</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/template/women-categories.html">Women</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="/template/about.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/template/signin.html">Sign in</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <i class="fa" data-bs-toggle="modal" data-bs-target="#exampleModal" style="font-size: 24px">&#xf07a;</i><span
-            id="cart-count" class="badge text-bg-warning"></span>
-        </form>
+        <a href="/cart.html">
+          <div class="cart">
+            <i class="bi bi-cart2"></i>
+            <div id="cartAmount" class="cartAmount">0</div>
+          </div>
+        </a>
       </div>
     </div>
   </nav>
-  <!--Checkout page static modal-->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          Sample Static Data For Only Index.html
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
   <header>
     <h1 class="text-center about-us-header">About Us</h1>
   </header>
