--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -122,7 +122,7 @@
   }
   
   .HomeBtn,
-  .checkout,
+  #checkout,
   .removeAll {
     background-color: goldenrod;
     color: white;
@@ -132,8 +132,20 @@
     cursor: pointer;
     margin-top: 10px;
   }
+
+  #checkout2 {
+    background-color: goldenrod;
+    color: white;
+    border: none;
+    padding: 6px;
+    border-radius: 3px;
+    cursor: pointer;
+    position: absolute;
+    top:24%;
+    left:42%;
+  }
   
-  .checkout {
+  #checkout {
     background-color: goldenrod;
   }
   .removeAll {
